--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -43,11 +43,13 @@
 
 \begin{fullwidth}
 This script is part of the course material for the MSc model Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, created \today.\\[0.5cm]
-Comments / questions to:\\[0.5cm]
+\end{fullwidth}
+
 \href{https://florianhartig.wordpress.com/}{Florian Hartig}\\
 University of Freiburg\\
-Germany
-\end{fullwidth}
+Germany\\[0.2cm]
+If you find typos or have suggestions, please report them by creating a ticket \href{https://github.com/florianhartig/ResearchSkills/issues}{here}
+
 
 
 
@@ -75,7 +77,7 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-NoDeriv
 The Oxford dictionary defines science as 
 
 \begin{quote}
-Science [mass noun] - the intellectual and practical activity encompassing the systematic study of the structure and behaviour of the physical and natural world through observation and experiment.
+Science [mass noun] - the intellectual and practical activity encompassing the systematic study of the structure and behavior of the physical and natural world through observation and experiment.
 \end{quote}
 
 \noindent Or, in the words of Richard Feynman:
@@ -105,10 +107,10 @@ It may thus be possible to do science without having ever learned the basics of 
 
 Empiricism\marginnote{Famous empiricists are, e.g., Hume or John Stuart Mill} is the stance that (scientific) knowledge comes only from observations. For an empiricist, (sensory) experience is more important for the formation of ideas about how the world works than logical reasoning or innate knowledge. 
 
-\paragraph{Inductive reasoning}\marginnote{Induction = conclusion from the specific to the general} An important idea in the context of empiricism is the concept of inductive reasoning. An induction is a conclusion from particular instances to the general. Example: all swans I have seen are white, therefore all swans are white.\marginnote{Empiricism != induction} Empiricism not prescribe the use of inductions for generating knowledge, but it seems obvious that pure empiricism would require to rely on inductive reasoning if any general conclusions are to be generated. 
+\paragraph{Inductive reasoning}\marginnote{Induction = conclusion from the specific to the general} An important idea in the context of empiricism is the concept of inductive reasoning. An induction is a conclusion from particular instances to the general. Example: all swans I have seen are white, therefore all swans are white.\marginnote{Empiricism != induction} Empiricism does not prescribe the use of inductions for generating knowledge, but it seems obvious that pure empiricism would require to rely on inductive reasoning if any general conclusions are to be generated. 
 
 
-\paragraph{The problem of induction}The problem\marginnote{Inductions are not always correct} with inductive reasoning is evident - an inductive conclusion does not need to be correct, even if the assumptions (observations, formal logic) are formally correct. Hence, we cannot be truly be sure if a if the knowledge that is created by empiricism and inductive reasoning is reliable. This problem has been named the ``problem of induction" by David Hume, but it was of course know since a long time. Sextus Empiricus (c. 160-210 AD), the name father of empiricism, observed famously:\marginnote{C. D. Broad remarked more shortly: ``Induction is the glory of science and the scandal of philosophy"}
+\paragraph{The problem of induction}The problem\marginnote{Inductions are not always correct} with inductive reasoning is evident - an inductive conclusion does not need to be correct, even if the assumptions (observations, formal logic) are formally correct. Hence, we cannot be truly be sure if the knowledge that is created by empiricism and inductive reasoning is reliable. This problem has been named the ``problem of induction" by David Hume, but it was of course known for a long time. Sextus Empiricus (c. 160-210 AD), the name father of empiricism, observed famously:\marginnote{C. D. Broad remarked more shortly: ``Induction is the glory of science and the scandal of philosophy"}
 
 \begin{quote}
 When they propose to establish the universal from the particulars by means of induction, they will effect this by a review of either all or some of the particulars. But if they review some, the induction will be insecure, since some of the particulars omitted in the induction may contravene the universal; while if they are to review all, they will be toiling at the impossible, since the particulars are infinite and indefinite. Sextus Empiricus (c. 160-210 AD)
@@ -150,7 +152,7 @@ In the previous section, we have learned about two fundamentally different thoug
 \item Discovery happens by (a limited number of) empirical observations (empiricism) and reasoning (rationalism), which are combined in the scientific method. 
 \end{itemize}
 
-The\marginnote{There have been some fierce debates in the 90's between natural scientists and postmodernist. A very good example is the so-called Sokol affair, in which the physics professor Alan Sokal published a nonsense article full of deliberately incomprehensible jargon in a post-modernist academic journal \citep{Sokal-BeyondhoaxScience-2008}} first two statements are express what is know in philosophy as positivism. Note that there are parts of social science (but not the natural sciences) that actively deny the truth of these statements. A notorious example are extreme positions of social constructionism and postmodernism, which hold broadly the view that reality and truth is not absolute, but a property that is constructed or negotiated through the interactions in a society.
+The\marginnote{There have been some fierce debates in the 90's between natural scientists and postmodernist. A very good example is the so-called Sokol affair, in which the physics professor Alan Sokal published a nonsense article full of deliberately incomprehensible jargon in a post-modernist academic journal \citep{Sokal-BeyondhoaxScience-2008}} first two statements express what is known in philosophy as positivism. Note that there are parts of social science (but not the natural sciences) that actively deny the truth of these statements. A notorious example are extreme positions of social constructionism and postmodernism, which hold broadly the view that reality and truth is not absolute, but a property that is constructed or negotiated through the interactions in a society.
 
 % TODO add Postmodernism Generator, Fashionable Nonsense, higher superstition
 
@@ -168,7 +170,7 @@ One of the first\marginnote{Aristotle's six standard works on logic are summariz
 
 \begin{figure}[]
 \begin{center}
-\includegraphics[width = 4cm]{figures/InductiveDeductiveAristotle.pdf}
+\includegraphics[width = 6cm]{figures/InductiveDeductiveAristotle.pdf}
 \caption{Aristotles inductive-deductive model of the scientific method.}
 \label{fig: InductiveDeductiveAristotle}
 \end{center}
@@ -200,18 +202,18 @@ How this intuition works to create our first premises remains then a bit unclear
 
 \subsection{Popper and the scientific method}
 
-We stay with the problem of induction, but take a 2000-yr leap to the the arguably most influential interpreter of the scientific method in the 20th century: Karl Popper. Popper developed the current orthodox interpretation of how science works. You may not like it, but the fact is that many, probably most scientists subscribe to his views as a basic description of the scientific method. Hence, don't act openly against it, and if people ask you how science works, the save bet is to recite Popper! 
+We stay with the problem of induction, but take a 2000-yr leap to the the arguably most influential interpreter of the scientific method in the 20th century: Karl Popper\marginnote{Karl Raimund Popper (28 July 1902 – 17 September 1994), born into a Jewish middle-class family in Austria-Hungarian Vienna, is widely regarded as one of the most influential philosophers of the 20th century}. Popper developed the current orthodox interpretation of how science works. You may not like it, but the fact is that many, probably most scientists subscribe to his views as a basic description of the scientific method. Hence, don't act openly against it, and if people ask you how science works, the save bet is to recite Popper! 
 
 
 \begin{figure}[]
 \begin{center}
-\includegraphics[width = 4cm]{figures/HypotheticoDeductivePopper.pdf}
+\includegraphics[width = 6cm]{figures/HypotheticoDeductivePopper.pdf}
 \caption{Popper's hypothetico-deductive model of the scientific method}
 \label{fig: InductiveDeductiveAristotle}
 \end{center}
 \end{figure}
 
-\paragraph{Hypothetico-deductive method}\marginnote{Popper: you cannot prove a theory, you can only reject it!} One of Popper's main contributions to the scientific method was to take a radical step and remove the induction completely from the scientific equation. According to Popper, the essence of science is not to produce new theories, but to have a method to reject them. We don't care how new theories arise: they may be guessed, they may be induced, this is not part of the scientific method. The methods starts once we have a theory: we look at the predictions of this theory (deduction), we can test it against observation and see whether the theory is compatible with it (deduction), and if not, we can conclude that the theory is wrong (deduction). Through this construction, science consists only of logically clean deductions. Here a summary of this method - again, if someone asks you what the scientific method is, this is what you should say:
+\paragraph{Hypothetico-deductive method} One\marginnote{Popper developed the hypothetico-deductive interpretation of the scientific method, the currently accepted orthodox narrative of how science works} of Popper's main contributions to the scientific method was to take a radical step and remove the induction completely from the scientific equation. According to Popper, the essence of science is not to produce new theories, but to have a method to reject them. We don't care how new theories arise: they may be guessed, they may be induced, this is not part of the scientific method. The methods starts once we have a theory: we look at the predictions of this theory (deduction), we can test it against observation and see whether the theory is compatible with it (deduction), and if not, we can conclude that the theory is wrong (deduction). Through this construction, science consists only of logically clean deductions. Here a summary of this method - again, if someone asks you what the scientific method is, this is what you should say:
 
 \begin{enumerate}
 \item Form / guess a hypothesis about a phenomenon in nature
@@ -220,18 +222,18 @@ We stay with the problem of induction, but take a 2000-yr leap to the the arguab
 \item Draw conclusions about the validity of the hypothesis
 \end{enumerate}
 
-It\marginnote{You cannot prove a theory, you can only reject. Hence, never write: ``we proved A'' - if you must, write ``the data is compatible with A''} follows from Popper that ``you cannot prove a theory, you can only reject'' - hence, avoid using the word proof in scientific articles - many people care deeply about popper, and they will react strongly to it!
+It\marginnote{You cannot prove a theory, you can only reject. Hence, never write: ``we proved A'' - if you must, write ``the data is compatible with A''} follows from Popper that ``you cannot prove a theory, you can only reject'' - hence, avoid using the word proof in scientific articles - many people care deeply about Popper, and they will react strongly to it!
 
 
 \subsection{Multiple working hypothesis}
 
-Popper is the mainstream, but there have been other suggestions about how science works of should work. A counterpoint to Popper's idea of rejection is the idea of multiple working hypothesis. The basic principle is simple - instead of trying to reject an idea, one can work with alternative theories. With time, evidence typically moving to favor one of them. \citet{Platt-StrongInferenceCertain-1964} tracks the history of this idea to an influential essay of the Geologist T. C. Chamberlin, who recommended working with multiple hypothesis to avoid as the best way to avoid “parental affection” (T. C. Chamberlin 1890, Science).
+Popper is the mainstream, but there have been other suggestions about how science works or should work. A counterpoint to Popper's idea of rejection is the idea of multiple working hypothesis. The basic principle is simple - instead of trying to reject an idea, one can work with alternative theories. With time, evidence typically moving to favor one of them. \citet{Platt-StrongInferenceCertain-1964} tracks the history of this idea to an influential essay of the Geologist T. C. Chamberlin, who recommended working with multiple hypothesis to avoid as the best way to avoid “parental affection” (T. C. Chamberlin 1890, Science).
 
 \subsection{Kuhn and variations of the scientific method}
 
 The argument for multiple working hypothesis is a first example that includes social aspect of how science works into the method - the problem that Chamberlin has with the idea of Popper (he formulated his view before Popper of course) is not that Popper's method wouldn't work in principle, but that in practice, researchers may be hesitant to reject ideas, because they like them to be true. 
 
-A more modern position that goes in a similar direction are the ideas of Thomas Kuhn: in his seminal work ``the structure of scientific revolutions'', Kuhn posits that sciences works within certain assumptions. In a normal science phase, we may apply Popper's idea to test and improve these assumptions, but we would not reject the basic premises even if there is evidence against them, unless a better theory emerges (revolutionary phase). The phases of science, according to Kuhn, are thus:
+A more modern position that goes in a similar direction are the ideas of Thomas Kuhn\marginnote{Thomas Samuel Kuhn (July 18, 1922 – June 17, 1996) was an American physicist, historian, and philosopher of science.}: in his seminal work ``the structure of scientific revolutions'', Kuhn posits that sciences works within certain assumptions. In a normal science phase, we may apply Popper's idea to test and improve these assumptions, but we would not reject the basic premises even if there is evidence against them, unless a better theory emerges (revolutionary phase). The phases of science, according to Kuhn, are thus:
 
 \begin{itemize}
 \item Pre-paradigm phase – no consensus about a certain phenomenon, incomplete theories
@@ -263,7 +265,7 @@ In the heart of all that, however, remains the idea of creating ``near-certain''
 \end{mdframed}
 
 
-\chapter{The scientific literature}
+\chapter{On the shoulders of giants - the scientific literature}
 
 Science today is highly specialized. Most basic questions have long been solved. You may think of the scientific enterprise as a "house of knowledge", where one story is built on the next. This is often expressed by a famous quote by Isaac Newton 
 
@@ -315,7 +317,7 @@ Taking larger passages / ideas from a source without making this clear is plagia
 
 \paragraph{Citation Signals} Citations can be modified by citation signals. An example is the signal ``but'', as in ``It is like it is (but see Adams, 2009)”. These signals are meant to clarify the meaning of a citation, e.g. as supportive, related, or even contradicting the statement made in the main work. Citation signals are therefore crucial, and wrong use can also constitute misconduct! (a few of the high-profile cases with politicians turned around a cf. that was inserted although it should be a direct citation). A list of explanations of the different signals is provided \href{http://en.wikipedia.org/wiki/Citation_signal}{here}. Some of the most important are:
 
-\paragraph{You should read the papers you cite} A recurrent problem, both in student's assignments and in the academic literature, is that papers are cited too broadly or wrongly. \citet{-Causecorrelationconjecture-2015} gives an account of that. \citet{Greenberg-Howcitationdistortions-2009} examine citation networks of papers that are miss-cited. The bottomline is: 1) sure you read the papers that you cite. 2) cite specifically, e.g. by noting in a short sentence for what you cite a paper or what they found, instead of writing only (see also Smith, 2001). 
+\paragraph{You should read the papers you cite} A recurrent problem, both in student's assignments and in the academic literature, is that papers are cited too broadly or wrongly. \citet{Editorial-Causecorrelationconjecture-2015} gives an account of that. \citet{Greenberg-Howcitationdistortions-2009} examine citation networks of papers that are miss-cited. The bottomline is: 1) sure you read the papers that you cite. 2) cite specifically, e.g. by noting in a short sentence for what you cite a paper or what they found, instead of writing only (see also Smith, 2001). 
 
 \vspace{1cm}
 \begin{mdframed}
@@ -373,7 +375,7 @@ Obviously, the last item would be the most desirable form of novelty. In any cas
 
 \begin{figure}[]
 \begin{center}
-\includegraphics[width = 5cm]{figures/MedawarZone}
+\includegraphics[width = 7cm]{figures/MedawarZone}
 \caption{The Medawar zone is an illustration of the sweet spot between too trivial and too difficult questions. The term was coined in \citet{Loehle-guidetoincreased-1990}, in honor of Sir Peter Medawar, who gave a verbal description of this zone in his book `` The Art of the Soluble'' \citep{Medawar-artsoluble-1967}.}
 \label{fig: MedawarZone}
 \end{center}
@@ -503,7 +505,7 @@ See chapter "descriptive statistics and visualization" \href{https://github.com/
 
 
 
-\chapter{Principles and channels of communication}
+\chapter{Principles and channels of scientific communication}
 
 If you have made a scientific discovery, or at least a little bit of scientific progress, you probably want to let the world know about it. Hence, you need to communicate it.
 
@@ -687,6 +689,7 @@ Keep it simple.\footnote{Mark Twain is famous for his effective writing. A tip f
 The first part has the function of providing a lazy reader with the question and directly the findings of the study. The second part will discuss how these findings fit to previous research, if knowledge needs to be updated and so on. \marginnote{Only discuss the limitations that question/limit the credibility of your results.} You will then typically proceed to limitations of your approach. The goal is to establish the domain under which your results are valid; do not question your approach in general, or list everything that could have been done as well. The final paragraph is very important - it provides your conclusions and outlook on the subject. 
 
 \section{Showcase: A commented paper}
+
 
 \begin{center}
 	\huge{Fancy analysis supports hypothesis\marginnote{Try to capture the questions, methods, and main results of your study in the title, if possible} X as the main cause high species diversity in tropical forests} \\ 
