--- a/Labs/Statistics/Practicals/GraphicsInR/Rgraphics.Rmd
+++ b/Labs/Statistics/Practicals/GraphicsInR/Rgraphics.Rmd
@@ -1,26 +1,41 @@
 ---
-title: 'Research Skills Practical: Graphics with R (ca. 1h)'
+title: 'Research Skills Practical: Graphics with R (ca. 1.5h)'
 author: "Florian Hartig"
-date: "3 October 2015"
-output: html_document
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+output:
+  html_document: default
+  pdf_document:
+    fig_height: 4
+    fig_width: 4
 ---
 
 ```{r, echo = F}
 set.seed(123)
-knitr::opts_chunk$set(fig.width=6, fig.height=6)
+knitr::opts_chunk$set(fig.width=5, fig.height=5)
 ```
 
-**Important** if you had problems to follow the practical, see links to websites with further explanations at the end of this document!
+
+ 
+
+
+* *This practical tutorial of the [RS course](http://florianhartig.github.io/ResearchSkills/) is intended to be read together with the more detailed [Statstics lecture notes](https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf)*
+
+* *To run the code demonstrated here, you should install R and RStudio*
+
+* *If you had problems to follow the practical, see links to websites with further explanations at the end of this document!*
 
 ## The R gui
 
-We will work in RStudio, but as a demonstration, let's have a look at the RGui first. Start up the program R from your programs in Windows. Hava a look at the window popping up, and type 2+2 in the main window. After hitting enter you will end up with this:
+We will work during this course in RStudio. RStudio is an editor that builds on R, but as a demonstration, let's have a look at the RGui first. The RGui is a simple editor that comes with the R installation (note it looks a bit different on a Mac than the windows version we show here).
+
+To start the RGui, start the program R from your programs in Windows. Hava a look at the window popping up, and type 2+2 in the main window. After hitting enter you will end up with this:
 
 ![](rgui1.png)
 
-This main window, called the R Console, is how you interact with the core R program that does all the communcation. Let's write something else
+The window you see here is called the R Console. Through the console, you interact with the core R program that does all the communcation. 
 
-R has a few standard datasets that are already loaded to try out stuff. Before we go to RStudio, let's try out plotting one of those. Type:
+Let's write something else: R has a few standard datasets that are automatically loaded. We will be using the airmiles dataset, which shows the number of airmiles awarded over time. Let's shortly demonstrate how to do a plot with this dataset. Type:
+
 ```{r, eval=FALSE}
 plot(airmiles, col = 4)
 ```
@@ -28,19 +43,19 @@ The result should look like this:
 
 ![](rgui2.png)
 
-So, as you see, this apparently plots airmiles against time. We'll discuss why and how this works, but let's first move to RStudio, an alternative program to interact with R.
+So, as you see, this apparently opens a new window (a graphics output) and plots airmiles against time. We'll discuss why and how this works. Before you get too used the the RGui, however, let's first move to RStudio, an alternative program to interact with R.
 
 ## The Rstudio editor
  
-RStudio basically offers the same functions as the RGui, but a few things can be done easier or are handled more comfortable for you. This is how it looks like:
+RStudio basically offers the same functions as the RGui, but a many things can be done easier or are handled more comfortable for you. This is how it looks like:
 
 ![](rst_interface.png)
 
-The console is in the bottom-left panel try to put in the same commands as we did before, i.e. 2+2, and plot the graph
+**Console** The console that we have already seen is in the bottom-left panel. You can confirm that it behaves in the same way by typing in the same commands as we did before, i.e. 2+2, or plot the graph.
 
-Above the console, r script files are displayed in the editor. You can work of course in the console, typing everything in directly, but typically you work in the script mode with the editor and then send the your code  to the console.
+**Editor** Above the console (top left), r script files are displayed and can be changed in the editor. The idea of a script file is that you collect all the commands that you send to the console in one file, so that you can re-run it later.  
 
-Typical script:
+A typical script may look like that:
 
 ```{r, eval = FALSE}
 # the hash means this is treated as a comment
@@ -54,94 +69,179 @@ rm(list=ls(all=TRUE))  # this command means all variables in the memory are eras
 
 ```
 
-## Variables
+To send a part of the script to the console, you can use the run button on the top right border of the editor window. For everything we do from now on, I would strongly recommend writing in the script, and then sending it to console from there. 
 
-Who has ever worked with a programming language? In a programming language, data is stored in variables / objects
+## Variables and data structures
+
+Who has ever worked with a programming language? In a programming language, data is stored in variables / objects. This is how we assign the word "test" to the variable "VariableX"
+
 ```{r}
 VariableX = "test"
 ```
 
-Now the content I have specified (i.e. the word "test") is stored in the computer, called workspace. Note that this is shown in RStudio in the topr-right corner, displayed as Environment:
-
-![](rst_globenv.png)
-
-I can access the variable by typing its name in the console, and it will return the value that is stored.
+I can now access the variable by typing its name in the console, and it will return the value that it stores.
 ```{r}
 VariableX
 ```
 
-## Data types and structures
-A variable can store different things: a number, a word, or a whole dataset. If it is a single value, we call it in R an atomic type. Important atomic types are: 
+We can see all the variables that we have specified in the global environment or R in the top-right corner or RStudio. You see that we have here the variable "VariableX" together with it's value. 
 
-- boolean
-- numeric
-- factor
-- character
+![](rst_globenv.png)
+
+
+### Data types and structures
+
+A variable can store different things: a number, a word, a list, or a whole dataset. 
+
+The most simple case are variables that contain a **single value** only. Here, the only question is what kind of values the variable contains. The different data types a single value can have are called the **atomic types** - think of it as the basic data types in R. Important atomic types are: 
+
+- boolean (TRUE / FALSE)
+- integer (1, 2, 3, 5)
+- numeric (1.1, 2.5, 3.456)
+- factor ("red", "green", "blue")
+- character ("a word", "another word")
 
 If we have a collection of several atomic types, we speak of a data structure or an object (there is a difference but it doesn't matter here). Important examples of this are: 
 
-- vector (a row of the same atomic types, e.g. 1,2,3,4,5)
-- data.frame (a list of vectors, this is the standard format for data)
+- **vector** (a row of the same atomic types, e.g. [1,2,3,4,5] )
+- **list** (basically like a vector, but can contain different types such as [1, "red", FALSE] )
+- **data.frame** (a list of vectors, this is the standard format for data in R. Think of it as a spreadsheet - each colum is a vector and can have a different type)
 
 A full list of data types is here http://www.statmethods.net/input/datatypes.html 
  
+### Checking data types and structures
 
-If you want to see which type or structure a variable has:
+Especially after reading in your data, it is important to check which type it has. The functions in R react differently depending on which atomic type you supply. 
+
+If you want to see which type or structure a variable has, use the str command:
 
 ```{r, eval = FALSE}
 str(object)
 ```
 
-gives you the structure of a variable / object
+To get a summary of your structure (e.g. mean per column, but what exactly is summarized depends on the data structure and type), use:
 
 ```{r, eval = FALSE}
 summary(object)
 ```
-tries to give you a summary, depending on the type you have
+
+To try to make an automatic plot (R will choose what it thinks most suitable for this structure / type), type:
 
 ```{r, eval = FALSE}
 plot(object)
 ```
-tries to make a plot, depending on the type you have
 
 Try this with the object airquality. 
 
-## The data frame
-The most common structure in R is the data frame. Basically, columns are stored as a list of vectors, so that each column can be a different data type.
+## Accessing columns, rows and elements in a data.frame or matrix
+
+As said, the most common structure in R is the data frame. Basically, columns are stored as a list of vectors, so that each column can be a different data type.
 
 You can select columns in a number of ways:
 
 - By name:
-```{r}
+```{r, eval = FALSE}
 airquality$Ozone
 ```
-- By index: 
-```{r}
+
+- By column index: 
+
+```{r, eval = FALSE}
 airquality[,1]
 ```
 
+Note that here [,1] means the first column. You could get the first row by [1,].
 
-Slicing: 
+#### Slicing
+
+The last type of accessing is an example of slizing. Slizing is a very powerfull technique that is available in most scientific programming languages. What it means is that you can access your data by typing in colums, rows, or particular elements. Look at the following commands (explanation always below):
+
 ```{r, eval = FALSE}
 airquality[,1:2]
 ```
+
+gets the first colums 1 and 2.
+
+
 ```{r, eval = FALSE}
 airquality[4:6,1]]
 ```
+
+gets rows 4 to 6 in column 1
+
+
 ```{r, eval = FALSE}
 airquality[c(1,2,3,4,7,8),1]
 ```
-What do you get?
+
+gets rows 1,2,3,4,7,8 in column 1. 
+
+You see, we can select any combination of elemets we want very conveniently from the data frame. Even more convenient is how we can create selections.
+
+
+```{r, eval = FALSE}
+1:10
+```
+
+gives us the values of 1 to 10
+
+```{r, eval = FALSE}
+c(1,5,6)
+```
+
+the c() function combines values in one vector (it is neccessary to have the values in one vector for slicing)
+
+```{r, eval = FALSE}
+c(1,5,6)
+```
+
+But we can also create selections with logical operators
+
+```{r, eval = FALSE}
+airquality$Temp > 80
+```
+
+creates a vector with True on all temperature values that are > 80. I can store this and use it for selection, or use it immediately
+
+
+
+```{r, eval = FALSE}
+airquality[airquality$Temp > 80 , ]
+```
+
+selects all rows with temperature > 80.
+
 
 ## How to load data?
-Try to load the airquality.txt file (provided to you) with 
 
-- with RStudio (point and click)
+So far, we had the data already in the R program. Now, we will demonstrate how to load some data (we will use the airquality.txt file provided to you)
+
+There are basically two options to load data
+
+- with RStudio (point and click) - go to Environment (top right), import dataset, and follow instructions
+
 - from the script with the read.table() command
 
-After loading the data, always check whether the data format is correct (numeric, factors) with the str(YOURDATA) command.
+The latter works like that
 
-After loading the data, check whether the types are as you want them (sometimes numeric is read in as factor, or *vice versa*). If a column would have the wrong type, we have to change this by typing
+
+```{r, eval = FALSE}
+data = read.table("airquality.txt", header = T)
+```
+
+In this case it works nice because I have prepared the data in the most easy way. If you have other data formates (commas, semicolons, header / no header), consult the help of teh read.table command. See also http://www.statmethods.net/input/importingdata.html for more options, e.g. excel or database import. 
+
+#### Checking the data
+
+After loading the data, always check whether the data format is correct 
+
+
+```{r}
+str(data)
+```
+
+You see here the atomic type of every column. Make sure it corresponds to what you want (sometimes numeric is read in as factor, or *vice versa*). If a column would have the wrong type, we have to change this by typing
+
 ```{r, eval = FALSE}
 as.factor(x)
 ``` 
@@ -149,7 +249,6 @@ or
 ```{r, eval = FALSE}
 as.numeric(x)
 ```
-See http://www.statmethods.net/input/importingdata.html for more options, e.g. excel import. 
 
 Note: this data file is already included in R, so if you don't manage to load it, you can continue anyway. 
 
@@ -157,6 +256,7 @@ Note: this data file is already included in R, so if you don't manage to load it
 OK, now you know how to select data from your data.
 
 Let's do some standard plots:
+
 ```{r, eval = FALSE}
 plot(airquality)
 ```
@@ -229,7 +329,7 @@ boxplot(len~supp*dose, data=ToothGrowth, notch=TRUE,
 
 ## Modifying a function afterwards with inkscape 
 
-Short explanation -- you can try this later: Save as a pdf, open with inkscape, modify e.g. colors of the figure, but a different background, etc.
+Short explanation -- you can try this later: Save as a pdf, open with inkscape, modify e.g. colors of the figure, use a different background, etc.
 
 ## Fitting a model
 
@@ -248,11 +348,9 @@ check out ?formula to understand how to put in formulas.
 
 ## Websites with examples / tutorials
 
-
-- This series of video lectures on youtube basically goes through the same steps http://www.youtube.com/playlist?list=UUAeWj0GhZ94wuvOIYu1XVrg
-- This website, which I also recommended in the stats lecture notes, has a list of written tutorials http://biometry.github.io/APES/R/R10-gettingStarted.html
-
-- Start with http://www.statmethods.net/index.html 
+- As an R beginner, for any basic task, start with the [Quick-R website](http://www.statmethods.net/index.html)
+- [This series of video lectures](http://www.youtube.com/playlist?list=UUAeWj0GhZ94wuvOIYu1XVrg) on youtube basically goes through the same steps 
+- [Our department stats help](http://biometry.github.io/APES/R/R10-gettingStarted.html), which I also recommended in the stats lecture notes, has a list of written tutorials 
 
 More examples for graphics here: 
 
@@ -260,12 +358,11 @@ More examples for graphics here:
 - https://www.stat.auckland.ac.nz/~paul/RGraphics/rgraphics.html
 - http://rgraphgallery.blogspot.de/search/label/heatmap 
 
-- http://biometry.github.io/APES/R/R10-gettingStarted.html (list with R tutorials)
- 
-Also, google is your friend!
+Also, remember: google is your friend!
 
 
-
+---
+**Copyright, reuse and updates**: By Florian Hartig. Updates will be posted at http://florianhartig.github.io/ResearchSkills/. Reuse permitted under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
 
 
 
