--- a/Labs/Statistics/Practicals/StatisticalAnalysisInR/Statistics.Rmd
+++ b/Labs/Statistics/Practicals/StatisticalAnalysisInR/Statistics.Rmd
@@ -1,10 +1,10 @@
 ---
+title: 'Research Skills Practical: Regression with R (ca. 1.5h)'
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   html_document:
     keep_md: yes
 ---
-Statistics crash course
-===
 
 ```{r, echo = F}
 set.seed(123)
@@ -12,8 +12,13 @@ knitr::opts_chunk$set(fig.width=6, fig.height=6)
 ```
 
 
+#### Notes for the user
 
-*These scripts are intended to be read together with the more detailed explanation [here](https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf)*
+* *This practical tutorial of the [RS course](http://florianhartig.github.io/ResearchSkills/) is intended to be read together with the more detailed [Statstics lecture notes](https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf)*
+
+* *If you had problems to follow the practical, see links to websites with further explanations at the end of this document!*
+
+* *To run the code demonstrated here, you should install R and RStudio*
 
 
 ## Continous response variables
@@ -340,5 +345,8 @@ See more examples at http://www.inside-r.org/packages/cran/mlogit/docs/suml
 
 And this is a good tutorial http://cran.r-project.org/web/packages/mlogit/vignettes/Exercises.pdf
 
+
+---
+**Copyright, reuse and updates**: By Florian Hartig. Updates will be posted at http://florianhartig.github.io/ResearchSkills/. Reuse permitted under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Licens
 
 
